# patchwork

./: .pre-commit-config.yaml  LICENSE  README.md  agent.py  evals.py  example_usage.py  plot_results.py  progress.md  pyproject.toml  run_patchwork.py
prompts/: formatter.py  react_prompt.txt  system_prompt.txt  user_message.txt
results/: run_log_filter_top_students_gpt-4.1-nano_20250622_171029.json  run_log_filter_top_students_gpt-4.1-nano_20250622_171129.json  run_log_filter_top_students_gpt-4.1-nano_20250622_171223.json  run_log_filter_top_students_gpt-4.1-nano_20250622_171838.json  run_log_filter_top_students_gpt-4.1-nano_20250622_172534.json  run_log_filter_top_students_gpt-4.1-nano_20250622_173044.json  run_log_filter_top_students_gpt-4.1-nano_20250622_173210.json  run_log_filter_top_students_gpt-4.1-nano_20250622_174017.json
results/gpt-4.1-mini/: batch_summary_gpt-4.1-mini_20250622_222004.json  batch_summary_gpt-4.1-mini_20250622_223535.json  run_log_filter_top_students_gpt-4.1-mini_20250622_221749.json  run_log_filter_top_students_gpt-4.1-mini_20250622_223300.json  run_log_generate_slug_gpt-4.1-mini_20250622_222004.json  run_log_generate_slug_gpt-4.1-mini_20250622_223535.json  run_log_group_by_first_letter_gpt-4.1-mini_20250622_221830.json  run_log_group_by_first_letter_gpt-4.1-mini_20250622_223325.json  run_log_plot_line_chart_gpt-4.1-mini_20250622_221858.json  run_log_plot_line_chart_gpt-4.1-mini_20250622_223356.json  (+2 more)
test_cases/: dataset.json
tools/: README.md  __init__.py  debugger.py  linter.py  plot_inspector.py  registry.py  test_harness.py
(+19 files in other folders)
