[project]
name = "patchwork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "openai>=1.90.0",
    "pylint>=3.3.7",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "pre-commit>=3.7.1",
]

[tool.setuptools]
packages = ["tools"]
